tools/iris.ebnf
(* ============================================================================ *)
(* IRIS Language Grammar - Extended Backus-Naur Form (EBNF)                     *)
(* ============================================================================ *)
(* Version: 0.2.1                                                               *)
(* Date: 2026-01-21                                                             *)
(* Specification: ISO/IEC 14977 compliant                                       *)
(* Reference: spec/15_grammar.md                                                *)
(* ============================================================================ *)

(* ===== 1. Top-level Syntax ===== *)

source_file = { item } ;

item = visibility_modifier ( mod_def | test_mod_def | type_def | const_def | fn_def
     | interface_def | package_decl | import_decl | test_def ) ;

visibility_modifier = [ "pub" ] ;

(* ===== 2. Module Definition ===== *)

mod_def = [ attribute ] "mod" identifier [ generic_params ] [ where_clause ]
          "(" port_list ")" "{" { mod_item } "}" ;

generic_params = "[" generic_param { "," generic_param } "]" ;
generic_param = identifier ":" generic_bound [ "=" default_value ] ;
generic_bound = "type" | "uint" | "int" | "bool" | type_expr ;
default_value = const_expr ;

where_clause = "where" constraint { "," constraint } ;
constraint = identifier ":" type_expr
           | identifier "==" const_expr
           | identifier "!=" const_expr
           | identifier "<" const_expr
           | identifier "<=" const_expr
           | identifier ">" const_expr
           | identifier ">=" const_expr ;

port_list = { port_decl } ;
port_decl = port_direction identifier ":" type_expr [ "," ] ;
port_direction = "in" | "out" | "inout" | "initiator" | "target" | "monitor" ;

mod_item = signal_decl | const_decl | type_alias | logic_block
         | inst_decl | mem_decl | fsm_block ;

(* Instance declaration *)
inst_decl = identifier ":" path [ generic_args ] "(" [ connection_list ] ")" ";" ;
connection_list = connection { "," connection } ;
connection = "." identifier "(" expr ")" ;

(* ===== 3. Signal and Variable Declarations ===== *)

signal_decl = let_decl | var_decl ;

(* let declaration: combinational or sequential depending on context *)
(* - let x = expr;        -> combinational (direct assignment) *)
(* - let x: T;            -> context-dependent *)
(* - let mut x = expr;    -> initial value becomes reset value in sync/fsm *)
let_decl = "let" [ "mut" ] identifier [ ":" type_expr ] [ "=" expr ] ";" ;

(* var declaration: sequential logic only (sync/fsm blocks only) *)
var_decl = "var" identifier [ ":" type_expr ] [ "=" expr ] ";" ;

const_decl = "const" identifier ":" type_expr "=" expr ";" ;

type_alias = "type" identifier [ generic_params ] "=" type_expr ";" ;

(* ===== 4. Type Expressions ===== *)

type_expr = primitive_type | array_type | tuple_type | user_type | generic_type ;

primitive_type = "bit" [ "[" const_expr "]" ]
               | "int" "[" const_expr "]"
               | "uint" "[" const_expr "]"
               | "bool"
               | "clock" [ clock_config ]
               | "reset" [ reset_config ]
               | "string" ;

(* Clock configuration: period specification *)
clock_config = "(" "period" ":" duration ")" ;

(* Reset configuration: active_low, assert_cycles, assert_time *)
reset_config = "(" reset_param { "," reset_param } ")" ;
reset_param = "active_low" ":" bool_literal
            | "assert_cycles" ":" integer_literal
            | "assert_time" ":" duration ;

array_type = type_expr "[" const_expr "]" ;

tuple_type = "(" type_expr { "," type_expr } ")" ;

user_type = path ;

generic_type = path "[" generic_args "]" ;

generic_args = generic_arg { "," generic_arg } ;
generic_arg = [ identifier ":" ] ( type_expr | const_expr ) ;

(* ===== 5. Expressions ===== *)

expr = unary_expr | binary_expr | primary_expr ;

unary_expr = unary_op expr ;

binary_expr = expr binary_op expr ;

primary_expr = literal
             | identifier
             | path
             | call_expr
             | index_expr
             | field_expr
             | cast_expr
             | if_expr
             | match_expr
             | concat_expr
             | repeat_expr
             | "(" expr ")" ;

unary_op = "!" | "~" | "-" | "&" | "|" | "^" ;

binary_op = "+" | "-" | "*" | "/" | "%" | "**"
          | "&" | "|" | "^" | "<<" | ">>" | ">>>"
          | "==" | "!=" | "<" | "<=" | ">" | ">="
          | "&&" | "||" ;

call_expr = expr "(" [ expr_list ] ")" ;

index_expr = expr "[" expr [ ":" expr ] "]" ;

field_expr = expr "." identifier ;

cast_expr = expr "as" type_expr ;

if_expr = "if" expr "{" expr "}" "else" "{" expr "}" ;

match_expr = "match" expr "{" { match_arm } "}" ;

concat_expr = "{" expr_list "}" ;

repeat_expr = "{" expr ";" const_expr "}" ;

expr_list = expr { "," expr } ;

const_expr = expr ;

(* ===== 6. Logic Blocks ===== *)

logic_block = signal_decl | comb_block | sync_block ;

(* Combinational logic block *)
comb_block = "comb" "{" { statement } "}" ;

(* Sequential logic block *)
sync_block = "sync" "(" clock_spec [ "," reset_spec ] ")" "{" { statement } "}" ;

clock_spec = expr "." ( "posedge" | "negedge" ) ;

reset_spec = expr "." ( "async" | "sync" ) ;

(* ===== 7. Finite State Machine (FSM) ===== *)

fsm_block = "fsm" identifier "(" clock_spec [ "," reset_spec ] ")" "{"
            state_enum transitions_block { output_block }
            "}" ;

state_enum = "state" "enum" "{" state_item { "," state_item } "}" ;

state_item = identifier [ moore_outputs ] ;

moore_outputs = "[" output_assign { "," output_assign } "]" ;

output_assign = identifier "=" const_expr ;

transitions_block = "transitions" "{" { transition_item } "}" ;

transition_item = identifier "=>" "{" { when_clause } "}"
                | "_" "=>" "{" statement "}" ;

when_clause = "when" expr "{" { transition_action } "}" ;

transition_action = "goto" identifier ";" | statement ;

output_block = "output" identifier "{" { output_case } "}" ;

output_case = identifier "=>" expr "," ;

(* ===== 8. Statements ===== *)

statement = assign_stmt
          | if_stmt
          | match_stmt
          | for_stmt
          | while_stmt
          | return_stmt
          | block_stmt
          | signal_decl ;

assign_stmt = lvalue "=" expr ";" ;

lvalue = identifier | index_expr | field_expr | "{" lvalue_list "}" ;

lvalue_list = lvalue { "," lvalue } ;

if_stmt = "if" expr "{" { statement } "}" [ "else" ( if_stmt | block_stmt ) ] ;

match_stmt = "match" expr "{" { match_arm } "}" ;

match_arm = pattern "=>" ( expr "," | block_stmt ) ;

pattern = literal
        | identifier
        | "_"
        | path
        | range_pattern
        | tuple_pattern
        | struct_pattern ;

range_pattern = const_expr ".." const_expr
              | const_expr "..=" const_expr ;

tuple_pattern = "(" pattern { "," pattern } ")" ;

struct_pattern = path "{" [ field_pattern { "," field_pattern } ] "}" ;

field_pattern = identifier [ ":" pattern ] ;

for_stmt = "for" identifier "in" range_expr "{" { statement } "}" ;

range_expr = expr ".." expr | expr "..=" expr ;

while_stmt = "while" expr "{" { statement } "}" ;

return_stmt = "return" [ expr ] ";" ;

block_stmt = "{" { statement } "}" ;

(* ===== 9. Interface Definition ===== *)

interface_def = "interface" identifier [ generic_params ] "{"
                { interface_signal | view_def }
                "}" ;

interface_signal = [ "logic" ] identifier ":" type_expr ";" ;

view_def = "view" identifier "{" { view_signal } "}" ;

view_signal = view_direction identifier ";" ;

view_direction = "in" | "out" | "inout" ;

(* ===== 10. Test Definition ===== *)

(* Test module: testbench-style top-level module without ports *)
(* Equivalent to SystemVerilog testbench top hierarchy *)
test_mod_def = "test" identifier "{" { test_item } "}" ;

test_item = let_decl | var_decl | const_decl | inst_decl
          | comb_block | sync_block | initial_block | seq_block
          | use_rust_decl | extern_rust_block | test_stmt ;

initial_block = "initial" "{" { statement } "}" ;

(* Sequential processing block: allows direct Rust code execution *)
seq_block = "seq" [ identifier ] "{" { seq_statement } "}" ;

seq_statement = rust_statement | signal_access | time_control | assert_stmt ;

signal_access = signal_read | signal_write ;

signal_read = signal_path ".value()" ;

signal_write = signal_path ".set(" expr ")" ;

signal_path = identifier { "." identifier } ;

time_control = await_stmt | delay_stmt ;

await_stmt = "await" await_expr ";" ;

await_expr = clock_edge | until_expr | event_expr | async_call ;

clock_edge = expr "." ( "posedge" | "negedge" | "cycles" "(" expr ")" ) ;

until_expr = "until" "(" expr [ "," "timeout" ":" duration ] ")" ;

event_expr = "event" "(" expr ")" ;

async_call = expr ".await" ;

delay_stmt = "#" ( number | duration ) ";" ;

number = decimal_digits ;

rust_statement = ? any valid Rust statement ? ;

(* External Rust function import *)
use_rust_decl = "use" "rust" "::" rust_path ";" ;

rust_path = identifier { "::" identifier } [ "::" "{" rust_import_list "}" ]
          | identifier { "::" identifier } "::" "*" ;

rust_import_list = identifier { "," identifier } ;

(* External Rust function declaration block *)
extern_rust_block = "extern" "rust" string_literal "{" { rust_fn_decl } "}" ;

rust_fn_decl = [ "async" ] "fn" identifier "(" [ rust_param_list ] ")" [ "->" rust_type ] ";" ;

rust_param_list = rust_param { "," rust_param } ;

rust_param = identifier ":" rust_type ;

rust_type = identifier | generic_type | "&" rust_type | "&" "mut" rust_type ;

(* Test function with #[test] attribute for unit testing *)
test_def = "#[" test_attr "]" "fn" identifier "(" ")" "{" { test_stmt } "}" ;

test_attr = "test" [ "(" test_params ")" ] ;

test_params = test_param { "," test_param } ;

test_param = "timeout" "=" duration
           | "should_fail"
           | "ignore"
           | "parametric" "(" param_values ")" ;

duration = integer_literal time_unit ;

time_unit = "ps" | "ns" | "us" | "ms" | "s" ;

param_values = "[" const_expr { "," const_expr } "]" ;

test_stmt = statement
          | assert_stmt
          | wait_stmt
          | drive_stmt
          | sample_stmt ;

assert_stmt = "assert" expr [ "," string_literal ] ";" ;

wait_stmt = "wait" "(" wait_condition ")" ";" ;

wait_condition = expr | duration | clock_spec ;

drive_stmt = identifier "<=" expr ";" ;

sample_stmt = "let" identifier "=" "sample" "(" expr ")" ";" ;

(* ===== 11. Package and Import ===== *)

package_decl = "package" package_path ";" { package_item } ;

package_path = identifier { "::" identifier } ;

package_item = visibility_modifier ( type_def | const_def | fn_def
             | mod_def | interface_def | enum_def | struct_def ) ;

import_decl = "import" import_path [ "as" identifier ] ";" ;

import_path = package_path [ "::" "{" import_list "}" | "::" "*" ] ;

import_list = import_item { "," import_item } ;

import_item = identifier [ "as" identifier ] ;

(* ===== 12. Literals ===== *)

literal = integer_literal | bool_literal | string_literal ;

integer_literal = [ size ] [ "'" base ] digits ;

size = decimal_digits ;

base = "b" | "o" | "d" | "h" ;

digits = binary_digit { [ "_" ] binary_digit }
       | octal_digit { [ "_" ] octal_digit }
       | decimal_digit { [ "_" ] decimal_digit }
       | hex_digit { [ "_" ] hex_digit } ;

bool_literal = "true" | "false" ;

string_literal = '"' { string_char } '"' ;

(* ===== 13. Identifiers and Paths ===== *)

identifier = letter { letter | digit | "_" } ;

letter = "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i" | "j"
       | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r" | "s" | "t"
       | "u" | "v" | "w" | "x" | "y" | "z"
       | "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I" | "J"
       | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R" | "S" | "T"
       | "U" | "V" | "W" | "X" | "Y" | "Z" ;

digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" | "8" | "9" ;

binary_digit = "0" | "1" ;

octal_digit = "0" | "1" | "2" | "3" | "4" | "5" | "6" | "7" ;

decimal_digit = digit ;

decimal_digits = decimal_digit { decimal_digit } ;

hex_digit = digit
          | "a" | "b" | "c" | "d" | "e" | "f"
          | "A" | "B" | "C" | "D" | "E" | "F" ;

string_char = ? any character except '"' and '\' ?
            | escape_sequence ;

escape_sequence = "\\" ( "n" | "r" | "t" | "\\" | '"' | "0"
                | "x" hex_digit hex_digit ) ;

path = identifier { "::" identifier } ;

(* ===== 14. Attributes ===== *)

attribute = "#[" attr_path [ attr_input ] "]" ;

attr_path = identifier { "::" identifier } ;

attr_input = "(" attr_args ")" ;

attr_args = attr_arg { "," attr_arg } ;

attr_arg = [ identifier "=" ] literal ;

(* ===== 15. Memory Declaration ===== *)

mem_decl = "mem" identifier ":" mem_type [ mem_config ] [ "=" initializer ] ";" ;

mem_type = element_type "[" depth "]" ;

element_type = primitive_type | struct_type ;

struct_type = path ;

depth = const_expr ;

mem_config = "{" { config_item } "}" ;

config_item = config_key ":" config_value [ "," ] ;

config_key = "ports" | "type" | "read_mode" | "write_mode" | "init_file" ;

config_value = literal | identifier ;

initializer = "{" [ init_item { "," init_item } ] "}"
            | string_literal ;

init_item = const_expr | "{" [ init_item { "," init_item } ] "}" ;

(* ===== 16. Type and Function Definitions ===== *)

type_def = enum_def | struct_def | type_alias ;

enum_def = "enum" identifier [ generic_params ] "{" enum_variant { "," enum_variant } "}" ;

enum_variant = identifier [ "=" const_expr ] ;

struct_def = "struct" identifier [ generic_params ] "{" { struct_field } "}" ;

struct_field = identifier ":" type_expr [ "," ] ;

fn_def = "fn" identifier [ generic_params ] "(" [ param_list ] ")" [ "->" type_expr ]
         "{" { statement } "}" ;

param_list = param { "," param } ;

param = identifier ":" type_expr ;

(* ===== End of IRIS Grammar ===== *)
