tools/irisfmt/packages/core/src/parser/parser.ts
import type { Token, SourceSpan, SourceLocation, Trivia } from '../lexer/token.js';
import { TokenKind } from '../lexer/token.js';
import type {
  SourceFile,
  Item,
  Identifier,
  Path,
  Visibility,
  Attribute,
  AttributeArg,
  GenericParams,
  GenericParam,
  GenericBound,
  WhereClause,
  Constraint,
  ConstraintKind,
  ModDef,
  ModItem,
  PortDecl,
  PortDirection,
  TypeExpr,
  PrimitiveType,
  TupleType,
  UserType,
  GenericType,
  GenericArg,
  Expr,
  Literal,
  BinaryOp,
  IfExpr,
  MatchExpr,
  MatchArm,
  Pattern,
  Stmt,
  LetDecl,
  VarDecl,
  ConstDecl,
  ConstDef,
  LValue,
  IfStmt,
  MatchStmt,
  ForStmt,
  RangeExpr,
  WhileStmt,
  ReturnStmt,
  BlockStmt,
  CombBlock,
  SyncBlock,
  ClockSpec,
  ResetSpec,
  FnDef,
  FnParam,
  EnumDef,
  EnumVariant,
  StructDef,
  StructField,
  TypeAlias,
  InterfaceDef,
  InterfaceSignal,
  ViewDef,
  ViewSignal,
  ImportDecl,
  ImportPath,
  ImportItem,
  PackageDecl,
  InstDecl,
  Connection,
  TestDef,
  TestAttribute,
  TestParam,
  TestStmt,
  AssertStmt,
  WaitStmt,
  WaitCondition,
  DriveStmt,
  SampleStmt,
  MemDecl,
  MemConfig,
  MemConfigItem,
  FsmBlock,
  StateEnum,
  StateItem,
  OutputAssign,
  TransitionsBlock,
  TransitionItem,
  WhenClause,
  TransitionAction,
  OutputBlock,
  OutputCase,
} from '../ast/types.js';

/**
 * Parse error information
 */
export interface ParseError {
  message: string;
  span: SourceSpan;
  severity: 'error' | 'warning';
}

/**
 * Parser result
 */
export interface ParseResult {
  ast: SourceFile;
  errors: ParseError[];
}

/**
 * Operator precedence levels for Pratt parser
 */
const enum Precedence {
  None = 0,
  Assignment = 1,   // =
  Or = 2,           // ||
  And = 3,          // &&
  BitOr = 4,        // |
  BitXor = 5,       // ^
  BitAnd = 6,       // &
  Equality = 7,     // == !=
  Comparison = 8,   // < <= > >=
  Shift = 9,        // << >> >>>
  Term = 10,        // + -
  Factor = 11,      // * / %
  Power = 12,       // **
  Unary = 13,       // ! ~ -
  Call = 14,        // () [] .
  Primary = 15,
}

/**
 * Get binary operator precedence
 */
function getBinaryPrecedence(kind: TokenKind): Precedence {
  switch (kind) {
    case TokenKind.PipePipe:
      return Precedence.Or;
    case TokenKind.AmpAmp:
      return Precedence.And;
    case TokenKind.Pipe:
      return Precedence.BitOr;
    case TokenKind.Caret:
      return Precedence.BitXor;
    case TokenKind.Amp:
      return Precedence.BitAnd;
    case TokenKind.EqEq:
    case TokenKind.Ne:
      return Precedence.Equality;
    case TokenKind.Lt:
    case TokenKind.Le:
    case TokenKind.Gt:
    case TokenKind.Ge:
      return Precedence.Comparison;
    case TokenKind.Shl:
    case TokenKind.Shr:
    case TokenKind.Ashr:
      return Precedence.Shift;
    case TokenKind.Plus:
    case TokenKind.Minus:
      return Precedence.Term;
    case TokenKind.Star:
    case TokenKind.Slash:
    case TokenKind.Percent:
      return Precedence.Factor;
    case TokenKind.Power:
      return Precedence.Power;
    default:
      return Precedence.None;
  }
}

/**
 * Convert token kind to binary operator
 */
function tokenToBinaryOp(kind: TokenKind): BinaryOp | null {
  switch (kind) {
    case TokenKind.Plus: return '+';
    case TokenKind.Minus: return '-';
    case TokenKind.Star: return '*';
    case TokenKind.Slash: return '/';
    case TokenKind.Percent: return '%';
    case TokenKind.Power: return '**';
    case TokenKind.Amp: return '&';
    case TokenKind.Pipe: return '|';
    case TokenKind.Caret: return '^';
    case TokenKind.Shl: return '<<';
    case TokenKind.Shr: return '>>';
    case TokenKind.Ashr: return '>>>';
    case TokenKind.EqEq: return '==';
    case TokenKind.Ne: return '!=';
    case TokenKind.Lt: return '<';
    case TokenKind.Le: return '<=';
    case TokenKind.Gt: return '>';
    case TokenKind.Ge: return '>=';
    case TokenKind.AmpAmp: return '&&';
    case TokenKind.PipePipe: return '||';
    default: return null;
  }
}

/**
 * IRIS Language Parser
 * Converts tokens into an Abstract Syntax Tree
 */
export class Parser {
  private readonly tokens: Token[];
  private pos = 0;
  private readonly errors: ParseError[] = [];

  constructor(tokens: Token[]) {
    this.tokens = tokens;
  }

  /**
   * Parse the token stream into an AST
   */
  parse(): ParseResult {
    const ast = this.parseSourceFile();
    return { ast, errors: this.errors };
  }

  // ========================================
  // Top-level parsing
  // ========================================

  private parseSourceFile(): SourceFile {
    const items: Item[] = [];
    const startSpan = this.current().span;

    while (!this.isEof()) {
      const item = this.parseItem();
      if (item) {
        items.push(item);
      }
    }

    return {
      kind: 'SourceFile',
      items,
      span: this.makeSpan(startSpan.start, this.current().span.end),
    };
  }

  private parseItem(): Item | null {
    // Skip invalid tokens
    while (!this.isEof() && this.current().kind === TokenKind.Invalid) {
      this.advance();
    }

    if (this.isEof()) {
      return null;
    }

    const start = this.current().span.start;

    // Parse attributes
    const attributes = this.parseAttributes();

    // Parse visibility
    const visibility = this.parseVisibility();

    // Parse item based on keyword
    if (this.check(TokenKind.Mod)) {
      return this.parseModDef(start, visibility, attributes);
    }
    if (this.check(TokenKind.Fn)) {
      // Check if this is a test function (has #[test] attribute)
      const hasTestAttr = attributes.some(
        attr => attr.path.segments.length === 1 && attr.path.segments[0]?.name === 'test'
      );
      if (hasTestAttr) {
        return this.parseTestDef(start, attributes);
      }
      return this.parseFnDef(start, visibility);
    }
    if (this.check(TokenKind.Struct)) {
      return this.parseStructDef(start, visibility);
    }
    if (this.check(TokenKind.Enum)) {
      return this.parseEnumDef(start, visibility);
    }
    if (this.check(TokenKind.Type)) {
      return this.parseTypeAlias(start, visibility);
    }
    if (this.check(TokenKind.Const)) {
      return this.parseConstDef(start, visibility);
    }
    if (this.check(TokenKind.Interface)) {
      return this.parseInterfaceDef(start, visibility);
    }
    if (this.check(TokenKind.Import)) {
      return this.parseImportDecl(start);
    }
    if (this.check(TokenKind.Package)) {
      return this.parsePackageDecl(start);
    }

    // Unknown token - skip and report error
    this.reportError(`Unexpected token: ${this.current().text}`);
    this.advance();
    return null;
  }

  // ========================================
  // Attributes
  // ========================================

  private parseAttributes(): Attribute[] {
    const attrs: Attribute[] = [];
    while (this.check(TokenKind.Hash)) {
      const attr = this.parseAttribute();
      if (attr) {
        attrs.push(attr);
      }
    }
    return attrs;
  }

  private parseAttribute(): Attribute | null {
    const start = this.current().span.start;
    this.expect(TokenKind.Hash, 'Expected #');
    if (!this.expect(TokenKind.LBracket, 'Expected [')) {
      return null;
    }

    const path = this.parsePath();
    if (!path) {
      return null;
    }

    let args: AttributeArg[] | undefined;
    if (this.match(TokenKind.LParen)) {
      args = this.parseAttributeArgs();
      this.expect(TokenKind.RParen, 'Expected )');
    }

    this.expect(TokenKind.RBracket, 'Expected ]');

    return {
      kind: 'Attribute',
      path,
      args,
      span: this.makeSpan(start, this.previous().span.end),
    };
  }

  private parseAttributeArgs(): AttributeArg[] {
    const args: AttributeArg[] = [];
    if (this.check(TokenKind.RParen)) {
      return args;
    }

    do {
      const arg = this.parseAttributeArg();
      if (arg) {
        args.push(arg);
      }
    } while (this.match(TokenKind.Comma));

    return args;
  }

  private parseAttributeArg(): AttributeArg | null {
    const start = this.current().span.start;
    let name: Identifier | undefined;

    // Check for named argument: name = value
    if (this.check(TokenKind.Ident) && this.peek().kind === TokenKind.Eq) {
      const nameToken = this.advance();
      name = this.makeIdentifier(nameToken);
      this.advance(); // consume =
    }

    const literal = this.parseLiteral();
    if (!literal) {
      return null;
    }

    return {
      kind: 'AttributeArg',
      name,
      value: literal,
      span: this.makeSpan(start, this.previous().span.end),
    };
  }

  // ========================================
  // Visibility
  // ========================================

  private parseVisibility(): Visibility {
    if (this.match(TokenKind.Pub)) {
      return 'pub';
    }
    return 'private';
  }

  // ========================================
  // Module Definition
  // ========================================

  private parseModDef(
    start: SourceLocation,
    visibility: Visibility,
    attributes: Attribute[]
  ): ModDef | null {
    this.expect(TokenKind.Mod, 'Expected mod');

    const nameToken = this.expect(TokenKind.Ident, 'Expected module name');
    if (!nameToken) {
      return null;
    }
    const name = this.makeIdentifier(nameToken);

    // Optional generic parameters
    const genericParams = this.check(TokenKind.LBracket)
      ? this.parseGenericParams() ?? undefined
      : undefined;

    // Optional where clause
    const whereClause = this.check(TokenKind.Where)
      ? this.parseWhereClause() ?? undefined
      : undefined;

    // Port list
    if (!this.expect(TokenKind.LParen, 'Expected (')) {
      return null;
    }
    const ports = this.parsePortList();
    this.expect(TokenKind.RParen, 'Expected )');

    // Module body
    if (!this.expect(TokenKind.LBrace, 'Expected {')) {
      return null;
    }
    const items = this.parseModItems();
    this.expect(TokenKind.RBrace, 'Expected }');

    return {
      kind: 'ModDef',
      visibility,
      attributes,
      name,
      genericParams,
      whereClause,
      ports,
      items,
      span: this.makeSpan(start, this.previous().span.end),
    };
  }

  private parsePortList(): PortDecl[] {
    const ports: PortDecl[] = [];
    while (!this.check(TokenKind.RParen) && !this.isEof()) {
      const port = this.parsePortDecl();
      if (port) {
        ports.push(port);
      } else {
        // Skip to next comma or end of list
        while (!this.check(TokenKind.Comma) && !this.check(TokenKind.RParen) && !this.isEof()) {
          this.advance();
        }
      }
      this.match(TokenKind.Comma); // optional trailing comma
    }
    return ports;
  }

  private parsePortDecl(): PortDecl | null {
    const start = this.current().span.start;
    const direction = this.parsePortDirection();
    if (!direction) {
      return null;
    }

    const nameToken = this.expect(TokenKind.Ident, 'Expected port name');
    if (!nameToken) {
      return null;
    }
    const name = this.makeIdentifier(nameToken);

    this.expect(TokenKind.Colon, 'Expected :');
    const typeExpr = this.parseTypeExpr();
    if (!typeExpr) {
      return null;
    }

    return {
      kind: 'PortDecl',
      direction,
      name,
      typeExpr,
      span: this.makeSpan(start, this.previous().span.end),
    };
  }

  private parsePortDirection(): PortDirection | null {
    if (this.match(TokenKind.In)) return 'in';
    if (this.match(TokenKind.Out)) return 'out';
    if (this.match(TokenKind.Inout)) return 'inout';
    if (this.match(TokenKind.Initiator)) return 'initiator';
    if (this.match(TokenKind.Target)) return 'target';
    if (this.match(TokenKind.Monitor)) return 'monitor';
    this.reportError('Expected port direction (in, out, inout, initiator, target, monitor)');
    return null;
  }

  private parseModItems(): ModItem[] {
    const items: ModItem[] = [];
    while (!this.check(TokenKind.RBrace) && !this.isEof()) {
      const item = this.parseModItem();
      if (item) {
        items.push(item);
      }
    }
    return items;
  }

  private parseModItem(): ModItem | null {
    const start = this.current().span.start;

    if (this.check(TokenKind.Let)) {
      return this.parseLetDecl(start);
    }
    if (this.check(TokenKind.Var)) {
      return this.parseVarDecl(start);
    }
    if (this.check(TokenKind.Const)) {
      return this.parseConstDecl(start, 'private');
    }
    if (this.check(TokenKind.Type)) {
      return this.parseTypeAlias(start, 'private');
    }
    if (this.check(TokenKind.Comb)) {
      return this.parseCombBlock(start);
    }
    if (this.check(TokenKind.Sync)) {
      return this.parseSyncBlock(start);
    }
    if (this.check(TokenKind.Mem)) {
      return this.parseMemDecl(start);
    }
    if (this.check(TokenKind.Fsm)) {
      return this.parseFsmBlock(start);
    }
    if (this.check(TokenKind.Ident)) {
      // Could be instance declaration: name: ModulePath(...)
      if (this.peek().kind === TokenKind.Colon) {
        return this.parseInstDecl(start);
      }
    }

    this.reportError(`Unexpected token in module body: ${this.current().text}`);
    this.advance();
    return null;
  }

  // ========================================
  // Generic Parameters
  // ========================================

  private parseGenericParams(): GenericParams | null {
    const start = this.current().span.start;
    if (!this.expect(TokenKind.LBracket, 'Expected [')) {
      return null;
    }

    const params: GenericParam[] = [];
    if (!this.check(TokenKind.RBracket)) {
      do {
        const param = this.parseGenericParam();
        if (param) {
          params.push(param);
        }
      } while (this.match(TokenKind.Comma));
    }

    this.expect(TokenKind.RBracket, 'Expected ]');

    return {
      kind: 'GenericParams',
      params,
      span: this.makeSpan(start, this.previous().span.end),
    };
  }

  private parseGenericParam(): GenericParam | null {
    const start = this.current().span.start;
    const nameToken = this.expect(TokenKind.Ident, 'Expected parameter name');
    if (!nameToken) {
      return null;
    }
    const name = this.makeIdentifier(nameToken);

    this.expect(TokenKind.Colon, 'Expected :');
    const bound = this.parseGenericBound();

    let defaultValue: Expr | undefined;
    if (this.match(TokenKind.Eq)) {
      defaultValue = this.parseExpr() ?? undefined;
    }

    return {
      kind: 'GenericParam',
      name,
      bound,
      defaultValue,
      span: this.makeSpan(start, this.previous().span.end),
    };
  }

  private parseGenericBound(): GenericBound {
    if (this.match(TokenKind.Type)) {
      return { kind: 'TypeBound' };
    }
    if (this.match(TokenKind.Uint)) {
      return { kind: 'UintBound' };
    }
    if (this.match(TokenKind.Int)) {
      return { kind: 'IntBound' };
    }
    if (this.match(TokenKind.Bool)) {
      return { kind: 'BoolBound' };
    }
    const typeExpr = this.parseTypeExpr();
    if (!typeExpr) {
      throw new Error('Expected type expression for type bound');
    }
    return { kind: 'TypeExprBound', typeExpr };
  }

  // ========================================
  // Where Clause
  // ========================================

  private parseWhereClause(): WhereClause | null {
    const start = this.current().span.start;
    this.expect(TokenKind.Where, 'Expected where');

    const constraints: Constraint[] = [];
    do {
      const constraint = this.parseConstraint();
      if (constraint) {
        constraints.push(constraint);
      }
    } while (this.match(TokenKind.Comma));

    return {
      kind: 'WhereClause',
      constraints,
      span: this.makeSpan(start, this.previous().span.end),
    };
  }

  private parseConstraint(): Constraint | null {
    const start = this.current().span.start;
    const nameToken = this.expect(TokenKind.Ident, 'Expected identifier');
    if (!nameToken) {
      return null;
    }
    const name = this.makeIdentifier(nameToken);

    let constraintKind: ConstraintKind;
    if (this.match(TokenKind.Colon)) {
      constraintKind = ':';
    } else if (this.match(TokenKind.EqEq)) {
      constraintKind = '==';
    } else if (this.match(TokenKind.Ne)) {
      constraintKind = '!=';
    } else if (this.match(TokenKind.Lt)) {
      constraintKind = '<';
    } else if (this.match(TokenKind.Le)) {
      constraintKind = '<=';
    } else if (this.match(TokenKind.Gt)) {
      constraintKind = '>';
    } else if (this.match(TokenKind.Ge)) {
      constraintKind = '>=';
    } else {
      this.reportError('Expected constraint operator');
      return null;
    }

    const value = this.parseExpr();
    if (!value) {
      return null;
    }

    return {
      kind: 'Constraint',
      name,
      constraintKind,
      value,
      span: this.makeSpan(start, this.previous().span.end),
    };
  }

  // ========================================
  // Type Expressions
  // ========================================

  private parseTypeExpr(): TypeExpr | null {
    const start = this.current().span.start;
    let typeExpr = this.parsePrimaryType();
    if (!typeExpr) {
      return null;
    }

    // Check for array type suffix: T[N]
    while (this.check(TokenKind.LBracket)) {
      this.advance();
      const size = this.parseExpr();
      if (!size) {
        return null;
      }
      this.expect(TokenKind.RBracket, 'Expected ]');

      typeExpr = {
        kind: 'ArrayType',
        elementType: typeExpr,
        size,
        span: this.makeSpan(start, this.previous().span.end),
      };
    }

    return typeExpr;
  }

  private parsePrimaryType(): TypeExpr | null {
    const start = this.current().span.start;

    // Primitive types
    if (this.check(TokenKind.Bit)) {
      return this.parseBitType(start);
    }
    if (this.check(TokenKind.Int)) {
      return this.parseIntType(start, 'int');
    }
    if (this.check(TokenKind.Uint)) {
      return this.parseIntType(start, 'uint');
    }
    if (this.match(TokenKind.Bool)) {
      return { kind: 'PrimitiveType', name: 'bool', span: this.makeSpan(start, this.previous().span.end) };
    }
    if (this.match(TokenKind.Clock)) {
      return { kind: 'PrimitiveType', name: 'clock', span: this.makeSpan(start, this.previous().span.end) };
    }
    if (this.match(TokenKind.Reset)) {
      return { kind: 'PrimitiveType', name: 'reset', span: this.makeSpan(start, this.previous().span.end) };
    }
    if (this.match(TokenKind.String)) {
      return { kind: 'PrimitiveType', name: 'string', span: this.makeSpan(start, this.previous().span.end) };
    }

    // Tuple type: (T1, T2, ...)
    if (this.check(TokenKind.LParen)) {
      return this.parseTupleType(start);
    }

    // User type or generic type: Path or Path[T, N]
    if (this.check(TokenKind.Ident)) {
      return this.parseUserOrGenericType(start);
    }

    this.reportError('Expected type');
    return null;
  }

  private parseBitType(start: SourceLocation): PrimitiveType {
    this.advance(); // consume 'bit'
    let width: Expr | undefined;

    if (this.match(TokenKind.Lt)) {
      // Parse width expression without comparison operators
      width = this.parseTypeWidthExpr() ?? undefined;
      this.expect(TokenKind.Gt, 'Expected >');
    }

    return {
      kind: 'PrimitiveType',
      name: 'bit',
      width,
      span: this.makeSpan(start, this.previous().span.end),
    };
  }

  private parseIntType(start: SourceLocation, name: 'int' | 'uint'): PrimitiveType {
    this.advance(); // consume 'int' or 'uint'
    this.expect(TokenKind.Lt, 'Expected <');
    // Parse width expression without comparison operators
    const width = this.parseTypeWidthExpr();
    this.expect(TokenKind.Gt, 'Expected >');

    return {
      kind: 'PrimitiveType',
      name,
      width: width ?? undefined,
      span: this.makeSpan(start, this.previous().span.end),
    };
  }

  /**
   * Parse expression for type width (e.g., bit<8>, int<N*2>)
   * Excludes comparison operators to avoid ambiguity with >
   */
  private parseTypeWidthExpr(): Expr | null {
    return this.parsePrecedenceExpr(Precedence.Comparison);
  }

  private parseTupleType(start: SourceLocation): TupleType | null {
    this.expect(TokenKind.LParen, 'Expected (');
    const elements: TypeExpr[] = [];

    if (!this.check(TokenKind.RParen)) {
      do {
        const elem = this.parseTypeExpr();
        if (elem) {
          elements.push(elem);
        }
      } while (this.match(TokenKind.Comma));
    }

    this.expect(TokenKind.RParen, 'Expected )');
